# ManchesterCSCoordinatedDiabetesStudy

./: CITATION.cff  README.md  Robbie-DataVacuumCleaner.ipynb  main.py  pyproject.toml
Activity Data/: UoMActivity2302.csv  UoMActivity2303.csv  UoMActivity2304.csv  UoMActivity2305.csv  UoMActivity2306.csv  UoMActivity2307.csv  UoMActivity2308.csv  UoMActivity2309.csv  UoMActivity2310.csv  UoMActivity2313.csv  UoMActivity2314.csv  UoMActivity2320.csv  UoMActivity2401.csv  UoMActivity2403.csv  UoMActivity2404.csv  UoMActivity2405.csv
Glucose Data/: UoMGlucose2301.csv  UoMGlucose2302.csv  UoMGlucose2303.csv  UoMGlucose2304.csv  UoMGlucose2305.csv  UoMGlucose2306.csv  UoMGlucose2307.csv  UoMGlucose2308.csv  UoMGlucose2309.csv  UoMGlucose2310.csv  UoMGlucose2313.csv  UoMGlucose2314.csv  UoMGlucose2320.csv  UoMGlucose2401.csv  UoMGlucose2403.csv  UoMGlucose2404.csv  UoMGlucose2405.csv
Glucose Data Preprocessing for PPGR Analysis/: Preprocessing.ipynb  README.md
Nutrition Data/: UoMNutrition2301.csv  UoMNutrition2302.csv  UoMNutrition2304.csv  UoMNutrition2305.csv  UoMNutrition2306.csv  UoMNutrition2307.csv  UoMNutrition2308.csv  UoMNutrition2309.csv  UoMNutrition2313.csv  UoMNutrition2314.csv  UoMNutrition2320.csv  UoMNutrition2401.csv  UoMNutrition2403.csv  UoMNutrition2404.csv  UoMNutrition2405.csv
Sleep Data/: UoM2301sleeptime.csv  UoM2302sleeptime.csv  UoM2303sleeptime.csv  UoM2304sleeptime.csv  UoM2306sleeptime.csv  UoM2307sleeptime.csv  UoM2308sleeptime.csv  UoM2309sleeptime.csv  UoM2310sleeptime.csv  UoM2312sleeptime.csv  UoM2313sleeptime.csv  UoMsleep2301.csv  (+21 more)
(+49 files in other folders)
