[project]
name = "manu-cs-glucose-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "parquet>=1.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "comm>=0.2.3",
    "ipython>=9.4.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1"
]
